--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "scheduler": "^0.23.0",
     "styled-components": "^6.1.0",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -28,7 +30,6 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "json-server": "^0.17.4",
